tests/errors/invalid-int.ssv
val:int
42
not_a_number
